스타일 변경

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body{
+    width: auto;
     background-color:hsl(308, 43%, 90%);
 }
 
 fieldset {
+    width: auto;
 	text-align: center;
 	border: 5px solid;
     color: hsl(315, 87%, 78%);
@@ -10,6 +12,7 @@ fieldset {
 }
 
 h1{
+    width: auto;
     color: hsl(315, 87%, 78%);
     display: table; margin-left: auto; margin-right: auto;
 
